vaihto html tekstiin

--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-kissa
-koira
-lehmä
-kettu
+<!DOCTYPE html>
+<html> 
+<head> 
+<title>ATKFIRMA.TEST</title> 
+</head> 
+<body> 
+<h1>ATKFIRMA</h1>
+<h2>Tietotekniset palvelut ja tuotteet</h2>
+</body> 
+</html>
