--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
 <title>ATKFIRMA.TEST</title> 
-</head> 
+</head 
 <body> 
 <h1>ATKFIRMA</h1>
 <h2>Tietotekniset palvelut ja tuotteet</h2>
