--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html> 
 <head> 
 <title>ATKFIRMA.TEST</title> 
-</head 
+</head> 
 <body> 
-<h1>ATKFIRMA</h1>
+<h1>MUNATKFIRMA</h1>
 <h2>Tietotekniset palvelut ja tuotteet</h2>
 </body> 
 </html>
